@@ -1,5 +1,7 @@
 Changes :
 
+* Added custom space input to FromMayaTransformConverter.
+
 * Allocated a TypeId range for use in the Gaffer project.
 
 Bug fixes :
